[project]
name = "clothes-ask-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "chromadb>=1.0.12",
    "huggingface-hub>=0.32.4",
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
